--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = tacc-openneuro
 	url = https://github.com/poldracklab/tacc-openneuro.git
 	datalad-url = https://github.com/poldracklab/tacc-openneuro.git
+[submodule "sourcedata/raw"]
+	path = sourcedata/raw
+	url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds002080
+	datalad-id = 55602a54-b2b6-11e9-87da-fe74f3654123
+	datalad-url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds002080
