--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 	url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds002080
 	datalad-id = 55602a54-b2b6-11e9-87da-fe74f3654123
 	datalad-url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds002080
+[submodule "sourcedata/templateflow"]
+	path = sourcedata/templateflow
+	url = /scratch1/03201/jbwexler/openneuro_derivatives/templateflow
+	datalad-id = c79c47b6-d0fb-11e8-aa11-64006a8a730f
+	datalad-url = /scratch1/03201/jbwexler/openneuro_derivatives/templateflow
